Added the protege plugin user guide

--- a/sections/c.back/d.prototype.tex
+++ b/sections/c.back/d.prototype.tex
@@ -1,3 +1,100 @@
 
-% TODO
+This section will explain how to use the prototype that has been implemented for the evaluation. There are two main ways in which someone may want to use the implementation. First, as a Java library for axiom weakening. This use case will only be discussed briefly. Second, the prototype may be used to apply the axiom weakening based repair to OWL ontology files using the implemented applications.
 
+\section{Building the Software}
+
+The prototype is implemented in Java, and will require at least Java version 17. The Maven tool has been used for dependency management. Both Maven and a Java 17 JDK must be installed for building this project. To download and build the project, the following code can be executed. After building, the packaged JAR files will be located in \inlinecode{target/}. There will be two different packages, one containing only the code in the project named \inlinecode{ontologyutils-X.X.X.jar}, and one containing also all required dependencies named \inlinecode{shaded-ontologyutils-X.X.X.jar}.
+
+\begin{lstlisting}
+git clone https://github.com/rolandbernard/ontologyutils
+cp ontologyutils
+mvn clean compile package
+\end{lstlisting}
+
+If you would rather use the pre-packaged jar files, those are also available in the GitHub repository at \url{https://github.com/rolandbernard/ontologyutils/releases}. Note that the releases may be out of date with the master branch of the repository.
+
+\section{Using as a Library}
+
+Since the project is implemented as a Maven project it is possible to use it as a dependency for another Maven project. To add the library as a dependency, if you have build the project yourself and run \inlinecode{mvn install}, it is sufficient to add the following to your \inlinecode{pom.xml} file. 
+
+\begin{lstlisting}
+<dependency>
+  <groupId>ontologyutils</groupId>
+  <artifactId>ontologyutils</artifactId>
+  <version>0.1.0</version>
+</dependency>
+\end{lstlisting}
+
+There is also the possibility to let Maven handle the installation from the repository by adding the following configuration to the \inlinecode{pom.xml} file. This will add the GitHub Maven repository and download the dependency from the ones available at \url{https://github.com/rolandbernard?tab=packages&repo_name=ontologyutils}.
+
+\begin{lstlisting}
+<repositories>
+    <repository>
+        <id>github</id>
+        <url>https://maven.pkg.github.com/rolandbernard/*</url>
+    </repository>
+</repositories>
+\end{lstlisting}
+
+Javadoc comments are included for most classes and methods, so it should be rather easy to understand the structure of the project.
+
+\section{Using the Applications}
+
+To simply use the applications that were also used for the evaluation in this thesis, use the JAR file produced during building. The packaged output at \inlinecode{target/shaded-ontologyutils-X.X.X.jar} will include all the necessary dependencies. From there it is enough to run the JAR file using a command if the form \inlinecode{java -cp <jar-file> www.ontologyutils.apps.<app-class> [argument ...]}, where \inlinecode{<jar-file>} should be replaced with the path to the JAR package and \inlinecode{<app-class>} should be replaced with one of the following.
+
+\begin{itemize}
+    \item \inlinecode{BenchCache} \enspace Is a utility application used for the evaluation of the cache effectiveness. It is not intended to be used by an end user.
+    \item \inlinecode{Benchmark} \enspace Is another utility for benchmarking the performance of the axiom weakening implementation.
+    \item \inlinecode{CheckConsistency} \enspace Is an application to test the consistency of an ontology, possibly using multiple different reasoner implementations.
+    \item \inlinecode{ClassifyOntology} \enspace Can be used to determine whether an ontology fits into a certain OWL 2 profile. Further, it also shows how expressive the Description Logic features used are.
+    \item \inlinecode{CleanupOntology} \enspace This application was used for the evaluation to apply normalization and remove axioms violating the OWL 2 DL profile.
+    \item \inlinecode{EvaluateRepairs} \enspace Can be used to compute the size of the inferred class hierarchy and the IIC between different ontologies.
+    \item \inlinecode{MakeInconsistent} \enspace Can be used to make a consistent ontology inconsistent by adding stronger versions of the axioms until they cause inconsistency.
+    \item \inlinecode{RepairMcs} \enspace Can be used to repair an ontology using a randomly sampled maximal consistent subset.
+    \item \inlinecode{RepairRemoval} \enspace Enables the repair of an ontology using the repair algorithm using removal.
+    \item \inlinecode{RepairWeakening} \enspace Enables the repair of an ontology using the repair algorithm using axiom weakening.
+    \item \inlinecode{ShowOntology} \enspace Is a simple application that prints all the axioms in the ontology.
+\end{itemize}
+
+To get specific information about how to use an application, simply use the \inlinecode{--help} argument. For example the following is the help output for the \inlinecode{RepairWeakening} application.
+
+\begin{lstlisting}
+Usage: www.ontologyutils.apps.RepairWeakening [options] <file>
+Options:
+  -h --help                print this help information and quit
+  -o --output=<file>       the file to write the result to
+  -n --normalize           normalize the ontology before repair
+  --normalize-nnf          normalize the ontology to NNF before repair
+  -R --no-repair           no not perform repair
+  -v --verbose             print more information
+  -V --extra-verbose       print even more information
+  --limit=<integer>        number of repairs to generate
+  --no-limit=<integer>     only stop once all repairs have been generated
+  --reasoner={fact++|hermit|jfact|openllet}
+                           the reasoner to use
+  --coherence              make the ontology coherent
+  --fast                   use fast methods for selection
+  --ref-ontology={any|intersect|intersect-of-some|largest|random|random-of-some}
+                           method for reference ontology selection
+  --bad-axiom={largest-mcs|least-mcs|most-mus|one-mcs|one-mus|random|some-mcs|some-mus}
+                           method for bad axiom selection
+  --strict-nnf             accept and produce only NNF axioms
+  --strict-alc             accept and produce only ALC axioms
+  --strict-sroiq           accept and produce only SROIQ axioms
+  --strict-simple-roles    use only simple roles in upward and downward covers
+  --uncached               do not use any caches for the covers
+  --basic-cache            use only a basic cache
+  --strict-owl2            do not produce intersection and union with a single operand
+  --simple-ria-weakening   do not use the more advanced RIA weakening
+  --no-role-refinement     do not refine roles in any context
+  --enhance-ref            keep the reference ontology as static axioms in the output
+  --preset={bernard2023|confalonieri2020|troquard2018}
+                           configuration approximating description in papers
+  <file>                   the file containing the original ontology
+\end{lstlisting}
+
+To repair the ontology in the file \inlinecode{inconsistent.owl} using the axiom weakening based repair algorithm, and write the repaired ontology to \inlinecode{consistent.owl}, for example, using the configuration used for the evaluation in this thesis, one would execute the following command.
+
+\begin{lstlisting}
+java -cp target/shaded-ontologyutils-0.1.0.jar www.ontologyutils.apps.RepairWeakening inconsistent.owl -o consistent.owl
+\end{lstlisting}
