Minor bug fixes

--- a/sections/c.back/d.prototype.tex
+++ b/sections/c.back/d.prototype.tex
@@ -13,7 +13,7 @@ mvn clean compile package
 
 If you would rather use the pre-packaged jar files, those are also available in the GitHub repository at \url{https://github.com/rolandbernard/ontologyutils/releases}. Note that the releases may be out of date with the master branch of the repository.
 
-\section{Using as a Library}
+\section{Use as a Library}
 
 Since the project is implemented as a Maven project it is possible to use it as a dependency for another Maven project. To add the library as a dependency, if you have build the project yourself and run \inlinecode{mvn install}, it is sufficient to add the following to your \inlinecode{pom.xml} file. 
 
